src/objects/Apttus_Config2__DataEnrichmentRule__c.object
<CustomObject>
    <description>Represents a single data enrichment rule in a validation/enrichment ruleset</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The help text message for the target object field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The help text message for the target object field</inlineHelpText>
        <label>Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the value is required in the target object field</description>
        <inlineHelpText>Flag to indicate whether the value is required in the target object field</inlineHelpText>
        <label>Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus_Config2__DataValidationEnrichmentRuleset__c</referenceTo>
        <relationshipLabel>Data Enrichment Rules</relationshipLabel>
        <relationshipName>DataEnrichmentRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObjectField__c</fullName>
        <description>API name of the source object field which holds the value that will get set on the target object field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the source object field which holds the value that will get set on the target object field</inlineHelpText>
        <label>Source Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectField__c</fullName>
        <description>API name of the target object field for which value needs to be set</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the target object field for which value needs to be set</inlineHelpText>
        <label>Target Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Enrichment Rule</label>
    <nameField>
        <displayFormat>ER-{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Enrichment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>